<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TextView
        android:id="@+id/show_bmr"
        android:layout_width="251dp"
        android:layout_height="87dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="141dp"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/show_bmi" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="251dp"
        android:layout_height="87dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/show_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/show_bmi"
        android:layout_width="251dp"
        android:layout_height="87dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/show_bmr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/show_name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="118dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="138dp"
        android:gravity="end"
        android:text="@string/BMR_"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel2"
        app:layout_constraintEnd_toStartOf="@+id/show_bmr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Result_topic"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="118dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:text="@string/Name_"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/show_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:text="@string/BMI_"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/show_bmi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_cancel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="34dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel2"
        app:layout_constraintTop_toBottomOf="@+id/show_bmr" />
</androidx.constraintlayout.widget.ConstraintLayout>